added 'clean' option to makefiles

--- a/failing_latex/Makefile
+++ b/failing_latex/Makefile
@@ -1,4 +1,4 @@
-TEX = pdflatex -interaction=nonstopmode
+TEX = pdflatex
 
 .PHONY: all view
 
@@ -6,3 +6,6 @@ all : helloworld.pdf
 
 helloworld.pdf : helloworld.tex
 	$(TEX) helloworld.tex
+	
+make clean:
+	rm helloworld.pdf helloworld.aux helloworld.log
