--- a/latex/Makefile
+++ b/latex/Makefile
@@ -6,3 +6,6 @@ all : helloworld.pdf
 
 helloworld.pdf : helloworld.tex
 	$(TEX) helloworld.tex
+	
+make clean:
+	rm helloworld.pdf helloworld.aux helloworld.log
